<?xml version="1.0" encoding="utf-8"?>


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fuel_station_detail"
    android:layout_height="match_parent"
    tools:context=".fragment.fuelStation.FuelStationDetail">

<androidx.cardview.widget.CardView
    android:id="@+id/stations_list_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp"
    android:elevation="6dp"
    app:cardCornerRadius="10dp"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="561dp"
        android:layout_margin="10dp"

        >

        <Button
            android:id="@+id/petrol"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:text="@string/petrol"
            android:textColor="#000000"
            android:textSize="12sp"
            app:backgroundTint="@color/search_opaque"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.216" />

        <TextView
            android:id="@+id/station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/space"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/available_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/space"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.447" />

        <TextView
            android:id="@+id/vehicle_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/space"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.728"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526" />

        <TextView
            android:id="@+id/station_address"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="24dp"
            android:text="@string/space"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.783"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.127" />

        <Button
            android:id="@+id/diesel"
            android:layout_width="130dp"
            android:layout_height="38dp"
            android:text="@string/diesel"
            android:textColor="#000000"
            android:textSize="12sp"
            app:backgroundTint="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.214" />

        <TextView
            android:id="@+id/olt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_name"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/sl_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_quantity"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.083" />

        <TextView
            android:id="@+id/sl_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vehicle_quantity"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.196" />

        <TextView
            android:id="@+id/sl_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_address_text"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <TextView
            android:id="@+id/sl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_vehicle"
            android:textColor="#070707"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/petrol"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.306" />

        <Button
            android:id="@+id/join_btn"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:text="@string/join_to_the_queue"
            app:layout_constraintEnd_toEndOf="@+id/diesel"
            app:layout_constraintStart_toStartOf="@+id/petrol"
            app:layout_constraintTop_toBottomOf="@+id/sl_10" />

        <Button
            android:id="@+id/exit_before"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/exit_before_pump_fuel"
            app:layout_constraintEnd_toEndOf="@+id/join_btn"
            app:layout_constraintStart_toStartOf="@+id/join_btn"
            app:layout_constraintTop_toBottomOf="@+id/join_btn" />

        <Button
            android:id="@+id/exit_after"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:backgroundTint="#FF1100"
            android:text="@string/exit_after_pump_fuel"
            app:layout_constraintEnd_toEndOf="@+id/exit_before"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/exit_before"
            app:layout_constraintTop_toBottomOf="@+id/exit_before" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="283dp"
            android:layout_height="37dp"
            app:layout_constraintEnd_toEndOf="@+id/diesel"
            app:layout_constraintStart_toStartOf="@+id/petrol"
            app:layout_constraintTop_toBottomOf="@+id/sl3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

</FrameLayout>