<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_fuel_quantity_details_admin"
    tools:context=".fragment.fuelStation.AddFuelStationDetailsAdmin">



    <androidx.cardview.widget.CardView
        android:id="@+id/stations_list_card_view_add_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:elevation="6dp"
        app:cardCornerRadius="10dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="561dp"
            android:layout_margin="10dp"

            >

            <EditText
                android:id="@+id/fuel_quantity"
                android:layout_width="272dp"
                android:layout_height="47dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_view_bg"
                android:inputType="number"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="@+id/fuel_type2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fuel_type2"
                app:layout_constraintTop_toBottomOf="@+id/spinner_fuel" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.283"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/station_update"
                android:layout_width="317dp"
                android:layout_height="48dp"
                android:text="@string/edit"
                android:textColor="#000000"
                android:textSize="12sp"
                app:backgroundTint="@color/search_opaque"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.946" />

            <TextView
                android:id="@+id/station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/petrol_quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.101" />

            <TextView
                android:id="@+id/diesel_quantity_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.728"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.198" />

            <TextView
                android:id="@+id/olt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/station_name"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <TextView
                android:id="@+id/petrol_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petrol_quantity"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.138" />

            <TextView
                android:id="@+id/petrol_quantity2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diesel_quantity"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.226" />

            <TextView
                android:id="@+id/fuel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_type"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.346" />

            <TextView
                android:id="@+id/fuel_type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuel_quantity"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_fuel"
                app:layout_constraintVertical_bias="0.052"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/fuel_type3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_close_status"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_quantity"
                app:layout_constraintVertical_bias="0.18"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <Spinner
                android:id="@+id/spinner_fuel"
                android:layout_width="296dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_type"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/open_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_station"
                app:layout_constraintBottom_toTopOf="@+id/station_update"
                app:layout_constraintEnd_toEndOf="@+id/fuel_quantity"
                app:layout_constraintHorizontal_bias="0.326"
                app:layout_constraintStart_toStartOf="@+id/fuel_quantity"
                app:layout_constraintTop_toBottomOf="@+id/fuel_quantity"
                app:layout_constraintVertical_bias="0.68" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF0000"
                android:text="@string/close_station"
                app:layout_constraintBottom_toTopOf="@+id/station_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.699"
                app:layout_constraintStart_toStartOf="@+id/fuel_quantity"
                app:layout_constraintTop_toBottomOf="@+id/fuel_quantity"
                app:layout_constraintVertical_bias="0.68" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</FrameLayout>