<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.fuelStation.FuelStationListAdmin">

    <androidx.cardview.widget.CardView
        android:id="@+id/stations_list_all_card_view_admin"
        android:layout_width="match_parent"
        android:layout_height="278dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:elevation="6dp"
        app:cardCornerRadius="10dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_margin="10dp"

            >

            <TextView
                android:id="@+id/station_name"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.906"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sl_1"
                app:layout_constraintVertical_bias="0.006" />

            <TextView
                android:id="@+id/station_id"
                android:layout_width="128dp"
                android:layout_height="51dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16" />

            <TextView
                android:id="@+id/station_address"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/station_name"
                app:layout_constraintVertical_bias="0.114" />

            <TextView
                android:id="@+id/sl_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_name"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.417" />

            <TextView
                android:id="@+id/sl_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_id"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.14" />

            <TextView
                android:id="@+id/sl_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_address_text"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.615" />

            <Button
                android:id="@+id/view_btn"
                android:layout_width="105dp"
                android:layout_height="35dp"
                app:backgroundTint="@color/color_1"
                android:text="@string/view_btn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/station_address"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toStartOf="@+id/station_address"
                app:layout_constraintTop_toBottomOf="@+id/station_address"
                app:layout_constraintVertical_bias="0.466"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>