<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.fuelStation.FuelStation">

    <androidx.cardview.widget.CardView
        android:id="@+id/stations_list_all_card_view"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:elevation="6dp"
        app:cardCornerRadius="10dp"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_margin="10dp"

            >

            <TextView
                android:id="@+id/station_name"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/space"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.906"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sl_1"
                app:layout_constraintVertical_bias="0.006" />

            <TextView
                android:id="@+id/station_address"
                android:layout_width="123dp"
                android:layout_height="34dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.973"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/station_name"
                app:layout_constraintVertical_bias="0.012" />

            <TextView
                android:id="@+id/station_open"
                android:layout_width="121dp"
                android:layout_height="39dp"
                android:layout_marginTop="24dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/station_address"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.431" />

            <TextView
                android:id="@+id/station_close"
                android:layout_width="120dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:text="@string/space"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.76" />

            <TextView
                android:id="@+id/station_status"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:background="@color/color_2"
                android:text="@string/space"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.898"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.961" />

            <TextView
                android:id="@+id/sl_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_name"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <TextView
                android:id="@+id/sl_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_open"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.46" />

            <TextView
                android:id="@+id/sl_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_close"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.714" />

            <TextView
                android:id="@+id/sl_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_status"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.937" />

            <TextView
                android:id="@+id/sl_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/station_address_text"
                android:textColor="#070707"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.236" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>